--- a/Web/src/app/components/hot-site/hot-site.component.html
+++ b/Web/src/app/components/hot-site/hot-site.component.html
@@ -19,7 +19,7 @@
 <div>
   <div class="global-container" fxLayout="column" fxLayoutGap="16px">
     <div class="early-access-content bottom-description">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore -->
     </div> 
     <div class="itens" fxLayout.gt-sm="row" fxLayoutGap.gt-sm="50px" fxLayoutAlign.gt-sm="center start" fxLayout.lt-md="column" fxLayoutGap.lt-md="20px" fxLayoutAlign.lt-md="center center"  >
       <div fxLayout="column" fxLayoutAlign="center center">
@@ -41,14 +41,16 @@
       </div>
       <div class="separator" fxHide.gt-sm="true"></div>
     </div>
-    <div class="referral-title">
-        Help us, we help you
-    </div>
-    <div class="referral-subtitle">
-      Get free AUC by inviting your friends to Auctus Experts
-    </div>
-    <div class="referral-description">
-        Receive free AUC just by referring others to Aucuts! When your referral signs up, you’ll receive 1,000 AUC.
+    <div class="referral-section">
+      <!-- <div class="referral-title">
+          Help us, we help you
+      </div>
+      <div class="referral-subtitle">
+        Get free AUC by inviting your friends to Auctus Experts
+      </div>
+      <div class="referral-description">
+          Receive free AUC just by referring others to Aucuts! When your referral signs up, you’ll receive 1,000 AUC.
+      </div> -->
     </div>
   </div>
 </div>
