--- a/Web/src/app/components/hot-site/be-an-expert/be-an-expert.component.html
+++ b/Web/src/app/components/hot-site/be-an-expert/be-an-expert.component.html
@@ -59,11 +59,34 @@
       </div>
   </div>
 </div>
-<!-- <div class="blog-section">
+<div class="blog-section">
   <div class="global-container">
       <div class="expert-section-title">
           Blog
       </div>
+      <div class="blog-cards" fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutAlign="center center" fxLayoutGap.gt-sm="20px" fxLayoutGap.lt-md="4px">
+        <a href="https://blog.auctus.org/auctus-team-member-interview-vinicius-melo-fec35ae3785e?source=rss----9c75dfa81867---4" target="_blank">
+          <div class="news-card">
+              <div class="img-div" style="background: url(https://cdn-images-1.medium.com/max/752/1*fYMqrtny4bdcu5xMayg97Q.png)"></div>
+              <div class="news-card-title">Auctus Team Member Interview — Vinicius Melo</div>
+              <div class="news-card-date">SEP 21</div>
+          </div>
+        </a>
+        <a href="https://blog.auctus.org/technical-post-3-the-experts-ranking-c89b27b69333?source=rss----9c75dfa81867---4" target="_blank">
+          <div class="news-card">
+              <div class="img-div" style="background: url(https://cdn-images-1.medium.com/max/1024/0*RVu-LuY4OnIOBRLt)"></div>
+              <div class="news-card-title">Technical Post #3 — The Expert’s Ranking</div>
+              <div class="news-card-date">SEP 13</div>
+          </div>
+        </a>
+        <a href="https://blog.auctus.org/auctus-june-announcements-auc-exchange-listings-new-team-member-new-office-platform-update-9ff6fd950e93?source=rss----9c75dfa81867---4" target="_blank">
+          <div class="news-card">
+              <div class="img-div" style="background: url(https://cdn-images-1.medium.com/max/567/0*oHN0R9Dxc7pcsYPn)"></div>
+              <div class="news-card-title">Auctus June Announcements: AUC Exchange Listings, New...</div>
+              <div class="news-card-date">JUN 23</div>
+          </div>
+        </a>
+      </div>
   </div>
-</div> -->
+</div>
 <hotsite-footer></hotsite-footer>
