--- a/Web/src/app/components/hot-site/hot-site.component.css
+++ b/Web/src/app/components/hot-site/hot-site.component.css
@@ -171,6 +171,7 @@
     .separator{
         width: calc(100% - 40px);
         height: 1px;
+        border-left: 0px;
         border-bottom: solid 1px #70707070;
     }
 
