--- a/Web/src/app/components/hot-site/be-an-expert/be-an-expert.component.html
+++ b/Web/src/app/components/hot-site/be-an-expert/be-an-expert.component.html
@@ -9,7 +9,7 @@
     <div class="global-container">
       <div class="itens-list" fxFlex.gt-sm="46" fxFlex.lt-md="100" fxFlexOffset.gt-sm="54" fxFlexOffset.lt-md="0">
         <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Become an Expert and monetize your trading know how</span></div>
-        <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>We’ll help build your audience while increasing your reach for monetization</span></div>
+        <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Build your audience, while increasing your reach for monetization</span></div>
         <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Lucrative commissions just by giving trading advice</span></div>
         <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>No Joining fees for Experts</span></div>
         <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Quick and easy startup with the largest bonuses for early Experts</span></div>
@@ -33,12 +33,12 @@
       <div class="separator"></div>
       <div fxLayout="column" fxLayoutAlign="space-around center" >
         <div class="profit-item-title">Fast Start Bonus</div>
-        <div class="profit-item-description">Earn even more just by onboarding enough users within your first 30 days of enrollment</div>
+        <div class="profit-item-description">Earn even more, just by onboarding enough users within your first 30 days of enrollment</div>
       </div>
       <div class="separator"></div>
       <div fxLayout="column" fxLayoutAlign="space-around center" >
         <div class="profit-item-title">Top Influencers</div>
-        <div class="profit-item-description">Monetize your trading voice just by interacting with your base</div>
+        <div class="profit-item-description">Monetize your trading voice by interacting with your base</div>
       </div>
     </div>
   </div>
@@ -65,24 +65,24 @@
           Blog
       </div>
       <div class="blog-cards" fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutAlign="center center" fxLayoutGap.gt-sm="20px" fxLayoutGap.lt-md="4px">
-        <a href="https://blog.auctus.org/auctus-team-member-interview-vinicius-melo-fec35ae3785e?source=rss----9c75dfa81867---4" target="_blank">
+        <a href="https://blog.auctus.org/auctus-team-member-interview-vinicius-melo-fec35ae3785e" target="_blank">
           <div class="news-card">
               <div class="img-div" style="background: url(https://cdn-images-1.medium.com/max/752/1*fYMqrtny4bdcu5xMayg97Q.png)"></div>
-              <div class="news-card-title">Auctus Team Member Interview — Vinicius Melo</div>
+              <div class="news-card-title">Read what our Head of Strategy, Vinicius, thinks will be first industry disrupted by blockchain</div>
               <div class="news-card-date">SEP 21</div>
           </div>
         </a>
-        <a href="https://blog.auctus.org/technical-post-3-the-experts-ranking-c89b27b69333?source=rss----9c75dfa81867---4" target="_blank">
+        <a href="https://blog.auctus.org/technical-post-3-the-experts-ranking-c89b27b69333" target="_blank">
           <div class="news-card">
               <div class="img-div" style="background: url(https://cdn-images-1.medium.com/max/1024/0*RVu-LuY4OnIOBRLt)"></div>
-              <div class="news-card-title">Technical Post #3 — The Expert’s Ranking</div>
+              <div class="news-card-title">Learn the details on how Expert’s are ranked and rewarded</div>
               <div class="news-card-date">SEP 13</div>
           </div>
         </a>
-        <a href="https://blog.auctus.org/auctus-june-announcements-auc-exchange-listings-new-team-member-new-office-platform-update-9ff6fd950e93?source=rss----9c75dfa81867---4" target="_blank">
+        <a href="https://blog.auctus.org/auctus-june-announcements-auc-exchange-listings-new-team-member-new-office-platform-update-9ff6fd950e93" target="_blank">
           <div class="news-card">
               <div class="img-div" style="background: url(https://cdn-images-1.medium.com/max/567/0*oHN0R9Dxc7pcsYPn)"></div>
-              <div class="news-card-title">Auctus June Announcements: AUC Exchange Listings, New...</div>
+              <div class="news-card-title">Stay up to date with company and token updates by following our blog</div>
               <div class="news-card-date">JUN 23</div>
           </div>
         </a>
