--- a/Web/src/app/components/hot-site/hot-site.component.html
+++ b/Web/src/app/components/hot-site/hot-site.component.html
@@ -20,9 +20,6 @@
 </div>
 <div>
   <div class="global-container" fxLayout="column" fxLayoutGap="16px">
-    <!-- <div class="early-access-content bottom-description">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-    </div>  -->
     <div class="itens" fxLayout.gt-sm="row" fxLayoutGap.gt-sm="50px" fxLayoutAlign.gt-sm="center start" fxLayout.lt-md="column" fxLayoutGap.lt-md="20px" fxLayoutAlign.lt-md="center center"  >
       <div fxLayout="column" fxLayoutAlign="center center">
         <div class="icon-wrapper" fxLayoutAlign="center center"><img src="./assets/img/Icon_Graph.png"></div>
@@ -43,8 +40,13 @@
       </div>
       <div class="separator" fxHide.gt-sm="true"></div>
     </div>
-    <div class="referral-section">
-      <!-- <div class="referral-title">
+  </div>
+  <div class="referral-section">
+    <div ngClass.gt-sm="global-container">
+      <div class="hot-site-referral-img-div">
+        <img fxHide.lt-md class="hot-site-referral-image" src="./assets/img/Img_Referral.png">
+      </div>
+      <div class="referral-title">
           Help us, we help you
       </div>
       <div class="referral-subtitle">
@@ -52,7 +54,8 @@
       </div>
       <div class="referral-description">
           Receive free AUC just by referring others to Aucuts! When your referral signs up, you’ll receive 1,000 AUC.
-      </div> -->
+      </div>
+      
     </div>
   </div>
 </div>
