--- a/Web/src/app/components/hot-site/hot-site.component.html
+++ b/Web/src/app/components/hot-site/hot-site.component.html
@@ -50,10 +50,10 @@
           Help us, we help you
       </div>
       <div class="referral-subtitle">
-        Get free AUC by inviting your friends to Auctus Experts
+          Receive free AUC just by referring others to Aucuts!
       </div>
       <div class="referral-description">
-          Receive free AUC just by referring others to Aucuts! When your referral signs up, you’ll receive 1,000 AUC.
+          When your referral signs up, you’ll receive 1,000 AUC
       </div>
       
     </div>
