--- a/Web/src/app/components/hot-site/hot-site.component.html
+++ b/Web/src/app/components/hot-site/hot-site.component.html
@@ -50,7 +50,7 @@
           Receive free AUC just by referring others to Aucuts!
       </div>
       <div class="referral-description">
-          When your referral signs up, you’ll receive 1,000 AUC
+          When your referral signs up, you’ll receive <b>1,000 AUC</b>
       </div>
       <div class="hot-site-referral-img-div">
         <img fxHide.lt-md class="hot-site-referral-image" src="./assets/img/Img_Referral.png">
