--- a/Web/src/app/components/hot-site/hot-site.component.html
+++ b/Web/src/app/components/hot-site/hot-site.component.html
@@ -47,7 +47,7 @@
           Help us, we help you
       </div>
       <div class="referral-subtitle">
-          Receive free AUC just by referring others to Aucuts!
+          Receive free AUC just by referring others to Auctus!
       </div>
       <div class="referral-description">
           When your referral signs up, you’ll receive <b>1,000 AUC</b>
