--- a/Web/src/app/components/hot-site/be-an-expert/be-an-expert.component.html
+++ b/Web/src/app/components/hot-site/be-an-expert/be-an-expert.component.html
@@ -8,11 +8,11 @@
     <img ngClass.gt-sm="expert-image" ngClass.lt-md="expert-image-mobile" src="./assets/img/Img_Banner2.png">
     <div class="global-container">
       <div class="itens-list" fxFlex.gt-sm="46" fxFlex.lt-md="100" fxFlexOffset.gt-sm="54" fxFlexOffset.lt-md="0">
-        <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Become an Expert and monetize your trading know how</span></div>
+        <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Become an Auctus Expert and monetize your trading know how</span></div>
         <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Build your audience, while increasing your reach for monetization</span></div>
-        <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Lucrative commissions just by giving trading advice</span></div>
+        <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Lucrative commissions by giving trading advice</span></div>
         <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>No Joining fees for Experts</span></div>
-        <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Quick and easy startup with the largest bonuses for early Experts</span></div>
+        <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Quick and easy sign up with the largest bonuses for early joiners</span></div>
       </div>
     </div>
   </div>
@@ -22,18 +22,18 @@
     </div>
     <div fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutGap.gt-sm="40px" fxLayoutGap.lt-md="20px" fxLayoutAlign.gt-sm="center stretch" fxLayoutAlign.lt-md="center center">
       <div fxLayout="column" fxLayoutAlign="space-around center" >
-        <div class="profit-item-title">Sign Up Bonus</div>
-        <div class="profit-item-description">Earn just by growing your user base with a referral code</div>
+        <div class="profit-item-title">Sign-up Bonus</div>
+        <div class="profit-item-description">Earn by growing your user base with a referral code</div>
       </div>
       <div class="separator"></div>
       <div fxLayout="column" fxLayoutAlign="space-around center" >
         <div class="profit-item-title">Top Experts of the Month</div>
-        <div class="profit-item-description">Each month, Experts with the highest ranking are rewarded with AUC tokens</div>
+        <div class="profit-item-description">Each month, Experts with the highest rankings are rewarded with AUC tokens</div>
       </div>
       <div class="separator"></div>
       <div fxLayout="column" fxLayoutAlign="space-around center" >
         <div class="profit-item-title">Fast Start Bonus</div>
-        <div class="profit-item-description">Earn even more, just by onboarding enough users within your first 30 days of enrollment</div>
+        <div class="profit-item-description">Earn even more, by onboarding enough users within your first 30 days of enrollment</div>
       </div>
       <div class="separator"></div>
       <div fxLayout="column" fxLayoutAlign="space-around center" >
