--- a/Web/src/app/components/hot-site/hot-site.component.html
+++ b/Web/src/app/components/hot-site/hot-site.component.html
@@ -9,7 +9,7 @@
   <div class="global-container" fxLayout="row" fxLayoutGap="16px">
     <img class="hot-site-phone-image" src.gt-sm="./assets/img/Img_Mobile.png" src.lt-md="./assets/img/Img_Mobile2.png">
     <div fxLayout="column" class="early-access-content">
-      <div class="early-access-description">Follow your favorite expert by tracking their performance and learn trading fundamentals, all while staying in control of your funds.</div>
+      <div class="early-access-description">Follow your favorite Experts by tracking their performance and get to know the trading fundamentals, all while staying in control of your funds.</div>
       <div class="early-access-title">Sign up for early access</div>
       <div fxLayout.gt-sm="row" fxLayoutAlign.gt-sm="start start" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center" fxLayoutGap.gt-sm="20px" fxLayoutGap.lt-md="5px">
         <inheritance-input #Referral [options]="getEmailInputOptions()" [value]="earlyAccessRequest.email" (onChange)="earlyAccessRequest.email = $event" class="input-modal" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web" ></inheritance-input>
@@ -24,18 +24,18 @@
       <div fxLayout="column" fxLayoutAlign="center center">
         <div class="icon-wrapper" fxLayoutAlign="center center"><img src="./assets/img/Icon_Graph.png"></div>
         <div class="item-title">Crypto Analysts Recommendation</div>
-        <div class="item-description">Recommendations from experts and cryptocurrencies that you are following.</div>
+        <div class="item-description">Choose and follow the best performing Expert to get real-time trading signals and recommendations.</div>
       </div>
       <div class="separator"></div>
       <div fxLayout="column" fxLayoutAlign="center center">
         <div class="icon-wrapper" fxLayoutAlign="center center"><img src="./assets/img/Icon_Podium.png"></div>
         <div class="item-title">Transparent and Trustful Ranking</div>
-        <div class="item-description">With our ranking system, you’ll be able to choose the right Expert by tracking all their trading performance.</div>
+        <div class="item-description">With our ranking system you’ll be able to choose the right Expert by tracking their trading performance.</div>
       </div>
       <div class="separator"></div>
       <div fxLayout="column" fxLayoutAlign="center center">
         <div class="icon-wrapper" fxLayoutAlign="center center"><img src="./assets/img/Icon_Lock.png"></div>
-        <div class="item-title">No Token Holding Period or Locking</div>
+        <div class="item-title">No Token Locking or Holding Period</div>
         <div class="item-description">Spend your tokens or cash out anytime you want!</div>
       </div>
       <div class="separator" fxHide.gt-sm="true"></div>
