--- a/Web/src/app/components/util/footer/footer.component.html
+++ b/Web/src/app/components/util/footer/footer.component.html
@@ -7,7 +7,7 @@
         <div class="footer-item-title">HOME</div>
         <div routerLink="/top-experts" class="footer-item"><a>Top Experts</a></div>
         <div routerLink="/top-assets" class="footer-item"><a>Top Assets</a></div>
-        <div routerLink="/about-us" class="footer-item"><a>About Us</a></div>
+        <div class="footer-item"><a href="https://auctus.org" target="_blank">About Us</a></div>
       </div>
       <div fxLayout="column" fxHide.lt-sm>
         <div class="footer-item-title">CONTACT</div>
