--- a/Web/src/app/components/home/recommendation-box/recommendation-box.component.html
+++ b/Web/src/app/components/home/recommendation-box/recommendation-box.component.html
@@ -1,18 +1,16 @@
-
     <div class="recommendation-box" fxLayout="column">
       <div class="box-title" [class.buy]="adviceType=='BUY'" [class.sell]="adviceType=='SELL'" [class.close]="adviceType=='HOLD'">{{adviceType}}</div>
       <table mat-table [dataSource]="adviceList" class="recommendation-table">
         <ng-container matColumnDef="assetCode">
           <th mat-header-cell *matHeaderCellDef> Asset </th>
           <td mat-cell *matCellDef="let advice" (click)="goToAssetDetails(advice.assetId)" class="pointer"> 
-            <div class="table-cell-title">{{advice.assetCode}}</div>{{advice.assetName}} 
+            <div class="table-cell-title"><img [src]="getAssetImgUrl(advice.assetId)" ><span>{{advice.assetCode}}</span></div>{{advice.assetName}} 
           </td>
-        </ng-container>
-      
+        </ng-container>      
         <ng-container matColumnDef="adviceType">
           <th mat-header-cell *matHeaderCellDef> Rating </th>
           <td mat-cell *matCellDef="let advice"> <div class="table-cell-title">{{adviceType}}</div> 
-            At price ${{advice.assetValueAtAdviceTime | valueDisplay}} 
+            At price {{advice.assetValueAtAdviceTime | valueDisplay}} 
           </td>
         </ng-container>
       
