--- a/Web/src/app/components/asset/asset-card/asset-card.component.html
+++ b/Web/src/app/components/asset/asset-card/asset-card.component.html
@@ -1,5 +1,5 @@
 <div class="asset-card" (click)="goToAssetDetails()" fxLayout="row" fxLayout.xs="column" fxLayoutGap="40px" fxLayoutGap.xs="5px" fxLayoutAlign="left center">
-  <div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="left center">
+  <div fxLayout="row" fxLayoutGap="20px" fxLayoutGap.lt-md="5px" fxLayoutAlign="left center">
     <div class="asset-icon">
       <img [src]="getAssetImgUrl()" onerror="this.style.display='none'" onload="this.style.display='unset'"/>
     </div>
@@ -12,11 +12,9 @@
         Follow
       </div>
     </div>
-  </div>
-  <div fxHide.lt-md class="ratings-distribution" fxLayout="row">
     <recommendation-distribution [data]="asset.recommendationDistribution" [showTitle]="'true'"></recommendation-distribution>
   </div>
-  <div fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutGap.gt-sm="40px" fxLayoutGap.lt-md="5px" fxLayoutAlign="left center">
+  <div fxLayout="row" fxLayoutGap.gt-sm="40px" fxLayoutGap.lt-md="5px" fxLayoutAlign="left center">
     <general-recommendation-tag [value]="asset.mode"></general-recommendation-tag>
     <div fxLayout="row" fxLayoutGap.gt-sm="40px" fxLayoutGap.lt-md="5px" fxLayoutAlign="left center">
       <div class="price">
@@ -25,7 +23,7 @@
       <percentage-display [value]="asset.variation24h"></percentage-display>
     </div>
   </div>
-  <div class="blue-button" ngClass.gt-sm="action-button" ngClass.lt-md="action-button-sm" *ngIf="showButtonForExpert" (click)="onGiveRecommendationClick($event)">
+  <div class="blue-button" ngClass.gt-sm="action-button" ngClass.lt-sm="action-button-sm" fxHide.lt-md *ngIf="showButtonForExpert" (click)="onGiveRecommendationClick($event)">
     Rate It
   </div>
 </div>
