--- a/Web/src/app/components/account/invite-friend/invite-friend.component.html
+++ b/Web/src/app/components/account/invite-friend/invite-friend.component.html
@@ -4,7 +4,15 @@
       Get 1000 AUC every time you refer a friend to Auctus
   </p>
   <div fxLayout="row" fxLayout.xs="column"  fxLayoutGap="10px" fxLayoutAlign="center center">
-    <button>Share on Twitter</button>
-    <button>Share on Facebook</button>
+    <mat-form-field appearance="outline" class="input-modal">
+      <mat-label>Referral Link</mat-label>
+      <input matInput #Link placeholder="Referral Link" type="text" onClick="this.select();" [(ngModel)]="link" readonly />
+      <span matSuffix class="copy-link-button" (click)="copyClick()">Copy</span>
+      <mat-hint *ngIf="copied" align="start">Link copied</mat-hint>
+    </mat-form-field>
+    <share-button [theme]="'outline'" [button]="'twitter'" [showText]="true" [size]="4" 
+      [url]="link" [description]="description" [tags]="'AUC'" [autoSetMeta]="false"></share-button>
+    <share-button [theme]="'outline'" [button]="'facebook'" [showText]="true" [size]="4" 
+      [url]="link" [autoSetMeta]="false"></share-button>
   </div>
 </div>
