--- a/Web/src/app/components/account/message-signature/message-signature.component.html
+++ b/Web/src/app/components/account/message-signature/message-signature.component.html
@@ -105,5 +105,5 @@
     <span>Do you think you can give expert advise to others? Apply to become a verified expert and get rewarded with AUC.&nbsp;<a class="link-request" (click)="becomeAdvisor()">Request</a></span>
   </div>
 </div>
-<advices></advices>
+<feed></feed>
 <trending-assets class="global-container-min inverted" [isWalletLogin]="true"></trending-assets>
