--- a/Web/src/app/components/asset/asset-details/reports-tab/reports-tab.component.html
+++ b/Web/src/app/components/asset/asset-details/reports-tab/reports-tab.component.html
@@ -13,7 +13,7 @@
           <div class="expert-rating">
             <bar-rating [theme]="'fontawesome-o'" [readOnly]="'true'" [rate]="report.score" [title]="report.score | number: '1.2-2'"></bar-rating>
           </div>
-          <span fxHide.gt-xs>Rating: {{report.rate.rate}}</span>
+          <span fxHide.gt-xs>Rating: {{report.rate}}</span>
           <div fxHide.gt-xs [title]="report.reportDate | date: 'medium'">{{report.reportDate | timeAgo}}</div>
         </td>
       </ng-container>
@@ -21,7 +21,7 @@
       <ng-container matColumnDef="rating">
         <th mat-header-cell *matHeaderCellDef><span fxHide.lt-sm> Rating </span> </th>
         <td mat-cell *matCellDef="let report">  
-          <span fxHide.lt-sm>{{report.rate.rate}}</span>
+          <span fxHide.lt-sm>{{report.rate}}</span>
         </td>
       </ng-container>
 
