--- a/Web/src/app/components/header/header.component.html
+++ b/Web/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
         <div fxShow="true" fxHide.lt-lg="true" class="separator"></div>
         <a fxShow="true" fxHide.lt-lg="true" routerLink="/top-assets" routerLinkActive="active"><span>TOP ASSETS</span></a>
         <div fxShow="true" fxHide.lt-lg="true" class="separator"></div>
-        <a fxShow="true" fxHide.lt-lg="true" routerLink="/reports" routerLinkActive="active"><span>REPORTS</span></a>
+        <a fxShow="true" fxHide.lt-lg="true" routerLink="/rating-reports" routerLinkActive="active"><span>REPORTS</span></a>
         <div fxShow="true" fxHide.lt-lg="true" class="separator"></div>
         <a fxShow="true" fxHide.lt-lg="true" routerLinkActive="active" href="https://auctus.org/" target="_blank"><span>ABOUT US</span></a>
         <global-search fxShow="true" fxHide.lt-md="true" class="search"></global-search>
