--- a/Web/src/app/components/asset/list-reports/list-reports.component.html
+++ b/Web/src/app/components/asset/list-reports/list-reports.component.html
@@ -11,7 +11,7 @@
             <div class="blue-button action-button" *ngIf="showNewAdviceButton" (click)="onNewAdviceClick()">NEW RATING</div>
         </div>
         <div fxLayout="column" fxLayoutAlign="center center">
-           
+            <report-card *ngFor="let report of reports" [reportFeed]="report"></report-card>
             <button [promiseBtn]="promise" class="pagination-link" *ngIf="hasMoreReports" (click)="loadMoreReports()">
                 LOAD MORE
             </button>
